--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -16,7 +16,7 @@ While many people can easily distinguish patterns that they find pleasing from t
 Despite these challenges, few computational tools exist for assisting with the pattern coloring process. Can computation make this process easier for artists of all levels by automatically suggesting colorings? To be an effective creative support tool, a coloring suggestion system should adapt to different usage scenarios. First, it should output diverse suggestions automatically for uncertain users who want to explore the space of good colorings. Second, the system should accomodate users with different aesthetic preferences by customizing suggestions to evoke a particular desired style. Finally, it should expose controls to let users refine their criteria and guide the suggestion process. 
 
 %% Challenges
-Building such a system requires a computational encoding of the properties that make a coloring desirable. There are many principles of aesthetics that might be relevant, such as any of the many different color harmony rules~\cite{ColorHarmonyBook} or artistic principles such as contrast and dominance~\cite{ArtPrinciples}. But which of these principles apply to which patterns and coloring styles? For those that do apply, which are the most important? Even assuming an answer to these questions, there is still the problem of how to actually \emph{generate} many, diverse new colorings that satisfy the desired properties.
+Building such a system requires a computational encoding of the properties that make a coloring desirable. There are many principles of aesthetics that might be relevant, such as any of the many different color harmony rules~\cite{ColorHarmonyBook}. But which of these principles apply to which patterns and coloring styles? For those that do apply, which are the most important? Even assuming an answer to these questions, there is still the problem of how to actually \emph{generate} many, diverse new colorings that satisfy the desired properties.
 
 %% Our approach
 In this paper, we present a probabilistic approach to automatic pattern colorization using factor graphs. Factor graphs have been successfully applied in problems such as synthesizing tiled pattern designs ~\cite{YiTingTiledPatterns} and assigning materials to 3D objects~\cite{MaterialMemex}.~\remark{Cite Yi-Ting's other paper. Also spend another sentence defining what a factor graph is.}
