--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -491,3 +491,24 @@ pages={599-619}
   year={2010},
   publisher={Books on Demand}
 }
+
+@article{YiTingLARJ,
+ author = {Yeh, Yi-Ting and Yang, Lingfeng and Watson, Matthew and Goodman, Noah D. and Hanrahan, Pat},
+ title = {Synthesizing open worlds with constraints using locally annealed reversible jump MCMC},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2012},
+ volume = {31},
+ number = {4},
+ month = jul,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {56:1--56:11},
+ articleno = {56},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2185520.2185552},
+ doi = {10.1145/2185520.2185552},
+ acmid = {2185552},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {constrained synthesis, factor graphs, open worlds},
+}
