A little bit of rewording.

--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -1,7 +1,7 @@
 \section{Binary Color Functions}
 \label{sec:binary}
 
-While group and segment terms model the dependency of color assignments on features of same-color regions, they do not capture relationships between different-color regions. In particular, adjacent color regions can have strong effects on their neighbor's perceived color, making colors seem more or less saturated or causing vibrating boundaries if adjacent lightness and colorfulness are too similar~\cite{AlbersInteractionOfColor}. Thus, we also predict color properties of adjacent segment pairs.
+While group and segment terms model the dependency of color assignments on features of same-color regions, they do not capture relationships between different-color regions. In particular, adjacent color regions can have strong effects on their neighbor's perceived color, making colors seem more or less saturated or causing vibrating boundaries if adjacent lightness and colorfulness are too similar~\cite{AlbersInteractionOfColor}. Thus, we also predict distributions over color properties for adjacent segment pairs.
 
 \subsection{Color Properties and Predictive Features}
 \label{sec:binaryPropsAndFeatures}
