--- a/latex/siggraph2013/unary.tex
+++ b/latex/siggraph2013/unary.tex
@@ -48,11 +48,11 @@ With a set of color properties and predictive features in hand, our goal is to p
 \groupInstStats(\colors_\group) =  \ln p( \prop( \colors_\group ) | \features_\group ) \cdot \size_\group
 \end{equation*}
 %%
-where $\colors_\group$ is the color of group $\group$ and $\features_\group$ are its features. We weight by the area of the group as larger regions tend to have more impact on the appearance of a coloring. Similarly, for a segment $\segment$, we need the function $\segInstStats(\colors_\segment) = \ln p( \prop( \colors_\segment ) | \features_\segment) \cdot \size_\segment$.
+where $\colors_\group$ is the color of group $\group$ and $\features_\group$ are its features. We weight by the area of the group as larger regions tend to have more impact on the appearance of a coloring. Similarly, for a segment $\segment$, we need the function $\segInstStats(\colors_\segment) = \ln p( \prop( \colors_\segment ) | \features_\segment) \cdot \size_\segment$. Evaluating these functions on a particular color results in a `score' for how well that color fits the given group or segment.
 
 \remark{Show \& discuss an example of two regions that have different feature vectors \& different predicted CPDs for some property (Perhaps background colorfulness vs. foreground colorfulness?)}
 
-What form should these distributions take? Closed-form continuous distributions, such as the normal distribution, are appealing for their simplicity.  However, they are unlikely to capture the nuances of data drawn from real patterns, which is often \emph{multimodal} in nature. As a simple example, most pattern backgrounds are either dark or light; very few use middling intensities~\remark{Do we still need/want a figure here?}. A simple normal distribution cannot faithfully capture this type of bimodal behavior.
+What form should the distributions $p$ take? Closed-form continuous distributions, such as the normal distribution, are appealing for their simplicity.  However, they are unlikely to capture the nuances of data drawn from real patterns, which is often \emph{multimodal} in nature. As a simple example, most pattern backgrounds are either dark or light; very few use middling intensities~\remark{Do we still need/want a figure here?}. A simple normal distribution cannot faithfully capture this type of bimodal behavior.
 
 We adapt the method of Charpiat et al.~\shortcite{MultimodalColorization}, who build distributions of colors given local texture features for grayscale image colorization. This method was designed explicitly to account for multimodality. Our approach is as follows: first, the space of possible property values is discretized into a finite number of bins. Next, a regression model is trained on pairs of the form $(\prop(\colors), \features)$ to predict, given a feature vector $\features$, the probability that its corresponding property value $\prop(\colors)$ falls into each bin. Given a new, never-before-seen feature vector, the regressor can then output a \emph{histogram} of these probabilities, one for each bin. The resulting histogram is then smoothed using kernel density estimation, and the resulting density forms the final, continuous probability distribution.
 
