--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -30,11 +30,11 @@ To generate attractive pattern colorings, a reasonable first step is to enforce 
 
 To overcome these problems, we can turn to examples of well-colored patterns for help. If we examine color groups that are large, highly connected, and spread across the entire pattern---indicative features of a background---we can see how saturated they are. This knowledge should prevent us from using excessively `loud' background colors. If we look at the typical contrast between adjacent pattern regions, we might find that large foreground regions have high contrast with the background but less contrast with thin borders and outlines. Enforcing these same properties in our own colorings should lead to better results.
 
-Consequently, the approach to pattern coloring we present in this paper is \emph{data-driven}: given a dataset of example patterns, we learn distributions over color properties such as saturation, lightness, and contrast for individual regions and for adjacent regions. We predict these distributions using discriminative spatial features of the pattern, such as the size and shape of different regions.
+Consequently, the approach to pattern coloring we present in this paper is \emph{data-driven}: given a dataset of example patterns, we learn distributions over color properties such as saturation, lightness, and contrast for individual regions and for adjacent regions. We predict these distributions using discriminative spatial features of the pattern, such as the size and shape of different regions. Finally, we use the predicted distributions to score the goodness of a given pattern coloring.
 
-In the next section, we introduce the dataset of patterns we use for our experiments (Section~\ref{sec:dataset}). Next, we describe the \emph{unary color functions} that we use to predict the color properties of indvidual pattern regions (Section~\ref{sec:unary}), as well the \emph{binary color functions} that predict the properties of adjacent regions (Section~\ref{sec:binary}). While color compatibility alone does not predict good pattern colorings, it helps to enforce global consistency between colors, and our approach makes use of this ability (Section~\ref{sec:colorCompat}).
+In the next section, we introduce the dataset of patterns we use for our experiments (Section~\ref{sec:dataset}). Next, we describe the \emph{unary color functions} that we use to score the color properties of indvidual pattern regions (Section~\ref{sec:unary}), as well the \emph{binary color functions} that score the properties of adjacent regions (Section~\ref{sec:binary}). While color compatibility alone does not predict good pattern colorings, it helps to enforce global consistency between colors, and our approach makes use of this ability (Section~\ref{sec:colorCompat}).
 
-We then show how these three different types of predictive functions---\emph{unary}, \emph{binary}, and \emph{global}---can be combined into one unified model using the framework of probabilistic factor graphs (Section~\ref{sec:model}). The resulting model is very flexible: we can sample from it to generate a variety of new coloring suggestions, train it on different example sets to capture different coloring styles, and add additional constraints to it to support different usage scenarios (Section~\ref{sec:results}).
+We then show how these three different types of scoring functions---\emph{unary}, \emph{binary}, and \emph{global}---can be combined into one unified model using the framework of probabilistic factor graphs (Section~\ref{sec:model}). The resulting model is very flexible: we can sample from it to generate a variety of new coloring suggestions, train it on different example sets to capture different coloring styles, and add additional constraints to it to support different usage scenarios (Section~\ref{sec:results}).
 
 %\remark{After pointing out the problems with the images, mention how some simple features (size of region, number of connected components) seem predictive of how colorful it should be. Call out a similar example for an adjacency feature. Mention that compatibility is still important(?) Our approach is to learn to predict these kinds of color properties given these kinds of pattern features, given a dataset of patterns. In the next sections, we'll first describe the dataset we use. Then we'll describe the unary functions we use to predict color properties of pattern regions (cite section), the binary functions we use to predict color properties of adjacent pattern regions (cite section), and our treatment of color compatibility (cite section). We'll then show how all of these different predictive functions can be combined into one unified probabilistic model through the framework of factor graphs. We can automatically tune the relative importance of each function in the model (cite section) and then sample from it to generate coloring suggestions for a given pattern (cite section).
 %}
