--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -24,7 +24,7 @@
 \newcommand{\adjTerm}{\Phi^{\textrm{Adj}}_\pi}
 \newcommand{\neighbors}{n}
 \newcommand{\adj}{\text{adj}}
-\newcommand{\adjStrength}{\text{str}}
+\newcommand{\adjStrength}{\texttt{str}}
 \newcommand{\size}{A}
 \newcommand{\groupInstStats}{\phi^{\textrm{Grp}}_\pi}
 \newcommand{\segInstStats}{\phi^{\textrm{Seg}}_\pi}
@@ -35,6 +35,7 @@
 \newcommand{\termWeight}{w_\term}
 \newcommand{\colorCompatWeight}{w^{\textrm{Compat}}}
 
+\newcommand{\colorCompatInstStats}{\phi^{\textrm{Compat}}}
 \newcommand{\colorCompatTerm}{\Phi^{\textrm{Compat}}}
 \newcommand{\factor}{\mathcal{F}}
 \newcommand{\segprime}{{\segment^{\prime}}}
